# mcp-server-apollo

./: .gitignore  LICENSE  PROJECT_PLAN.md  PUBLISH.md  README.md  pyproject.toml
src/mcp_server_apollo/: __init__.py  __main__.py  apollo_tools.py  server.py
